fix: container align

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -27,8 +27,8 @@ img {
 .App {
   font-family: sans-serif;
   text-align: center;
-}
-
-.container {
-  padding: 24px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
